05-section5/c3-ec2securitygroups.tf
#create security group -ssh traffic
resource "aws_security_group" "vpc-ssh" {
  name        = "vpc-ssh"
  description = "dev vpc ssh"


  ingress {
    description      = "allow port 22"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
   
  }

  egress {
     description      = "allow all ip and ports outbound"
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]

  }

  tags = {
    Name = "vpc-ssh"
  }
}

#create security group -web traffic
resource "aws_security_group" "vpc-web" {
  name        = "vpc-web"
  description = "dev vpc web"


  ingress {
    description      = "allow port 80"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
   
  }
ingress {
    description      = "allow port 80"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
   
  }
  egress {
     description      = "allow all ip and ports outbound"
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]

  }

  tags = {
    Name = "vpc-ssh"
  }
}
